--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/base": "^5.0.0-beta.70",
     "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.7.0",
     "react": "^19.0.0",
